# rag_HYMY

./: .gitattributes  .gitignore  DECISIONS.md  README.md  REPORT_VECTOR_UPGRADE.md  pyproject.toml  stage4_comparison.md
data/: slang_candidates.md  web_history.json
data/distill/: _master.md  两性.md  人际.md  价值观.md  健康.md  内容创作.md  决策.md  学习.md  情绪.md  投资.md  搞钱.md  教育.md  消费.md  社会观察.md  职业.md  认知.md
data/index/: quotes_index.json
data/raw/: example.json  mock_batch_001.json  mock_batch_002.json
data/tagged/: batch_001_tagged.json  batch_002_tagged.json  batch_004_tagged.json  batch_005_tagged.json  batch_008_tagged.json  batch_009_tagged.json  batch_010_tagged.json  batch_011_tagged.json  batch_013_tagged.json  batch_014_tagged.json  batch_016_tagged.json  batch_017_tagged.json  batch_018_tagged.json  batch_020_tagged.json  batch_021_tagged.json  batch_022_tagged.json  batch_023_tagged.json  example_tagged.json  pending_20_batch_001_tagged.json  pending_20_batch_002_tagged.json  pending_20_batch_003_tagged.json  pending_20_batch_004_tagged.json  pending_20_batch_005_tagged.json  (+436 more)
doc/: task.MD
hymy/: .env.example  AGENTS.md  app.py  enrich_data.py  process_kb.py  reconstruct_kb.py  requirements.txt  run_web.py  verify_kb.py
hymy/data/: config.json  (+1 more)
hymy_rag/: __init__.py  __main__.py
persona/: meta_thinking.md
prompts/: distill_domain_prompt.md  distill_master_prompt.md  package_template.md  tagging_prompt.md
scripts/: benchmark_search.py  generate_mock_batch_001.py  generate_stage4_comparison.py
tests/: test_pipeline.py  test_vector_retrieval.py
(+42 files in other folders)
