[project]
name = "hymy-rag"
version = "0.1.0"
description = "Local RAG pipeline for HYMY quote knowledge base"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
rag = [
  "FlagEmbedding>=1.3.0",
  "qdrant-client>=1.12.0",
  "torch>=2.0.0",
  "tqdm>=4.66.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
